* 2014-05-07 - thorben.betten@open-xchange.com

 - Fix for bug 32339: Drop comments in advance
 - Fix for bug 32350: Deal with empty array on mailbox append operation

* 2014-05-06 - marcus.klein@open-xchange.com

 - Fix for bug 32272: Java must be installed completely before open-xchange-core post installation scripts are executed.
 - Fix for bug 32102: Only increment transaction counter if replication monitor is enabled.

* 2014-05-06 - tobias.friedrich@open-xchange.com

 - Fix for bug 31391: Register push certificate provider for Mac OS under the correct class
 - Fix for bug 32298: Really skip trash folders when listing WebDAV resource collections

* 2014-05-06 - martin.schneider@open-xchange.com

 - Fix for bug 32301: Also accept '\r' as escape sequence in vcard text value fields

* 2014-05-05 - lars.hoogestraat@open-xchange.com

 - Fix for bug 32250: Changed yahoo api access to https further added error message on receiving invalid response

* 2014-05-05 - thorben.betten@open-xchange.com

 - Fix for bug 32296: Do not use proxy authentication for external mail accounts

* 2014-05-05 - tobias.friedrich@open-xchange.com

 - Fix for bug 32292: Prevent USM-JSON* and USM-EAS* sessions from being put to distributed storage 

* 2014-05-04 - ioannis.chouklis@open-xchange.com

 - Fix for bug 30647: Display the maximum allowed size of an attachment in a human readable format. 

* 2014-05-04 - thorben.betten@open-xchange.com

 - Fix for bug 32265: Check for possible absent user participant prior to checking appointment's permissions

* 2014-05-03 - tobias.friedrich@open-xchange.com

 - Fix for bug 32288: Pass the correct mandatory contact fields

* 2014-05-02 - marcus.klein@open-xchange.com

 - Fix for bug 32044: Update the reminder's folderID for all accessing users, if there are no participants. Check additionally permissions
   on the destination folder for all reminder.

* 2014-05-02 - tobias.friedrich@open-xchange.com
