@@ -49,9 +49,16 @@
 
 package com.openexchange.xing.json.osgi;
 
+import java.util.Dictionary;
+import java.util.Hashtable;
 import com.openexchange.ajax.requesthandler.osgiservice.AJAXModuleActivator;
+import com.openexchange.capabilities.CapabilityChecker;
 import com.openexchange.capabilities.CapabilityService;
 import com.openexchange.config.cascade.ConfigViewFactory;
+import com.openexchange.exception.OXException;
+import com.openexchange.session.Session;
+import com.openexchange.tools.session.ServerSession;
+import com.openexchange.tools.session.ServerSessionAdapter;
 import com.openexchange.xing.access.XingOAuthAccessProvider;
 import com.openexchange.xing.json.XingActionFactory;
 
@@ -78,6 +85,30 @@ public class XingJsonActivator extends AJAXModuleActivator {
     protected void startBundle() throws Exception {
         // Register AJAX module
         registerModule(new XingActionFactory(this), "xing");
+
+        // Register capability
+        final String sCapability = "xingjson";
+        final Dictionary<String, Object> properties = new Hashtable<String, Object>(1);
+        properties.put(CapabilityChecker.PROPERTY_CAPABILITIES, sCapability);
+        registerService(CapabilityChecker.class, new CapabilityChecker() {
+            @Override
+            public boolean isEnabled(String capability, Session ses) throws OXException {
+                if (sCapability.equals(capability)) {
+                    final ServerSession session = ServerSessionAdapter.valueOf(ses);
+                    if (session.isAnonymous()) {
+                        return false;
+                    }
+
+                    // Maybe perform permission check here
+                    return true;
+                }
+
+                return true;
+            }
+        }, properties);
+
+
+        getService(CapabilityService.class).declareCapability(sCapability);
     }
 
 }
